Implement product reviewing functionality
- Create CRUD operations for reviews
- Update product response in product controller details action
- Make product/all endpoint public
- Update login response to return user id
- Update search engine to check for empty spaces
- Fix empty pages error, return message instead